[tool.poetry]
name = "rlscv"
version = "0.0.1"
description = "Common utilities for managing RLS projects"
authors = ["Mark Mayerfeld <mark.m.mayerfeld@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rlscv" },
    { include = "rlscv/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
opencv-contrib-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
isort = "^5.11.4"
tox = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" # package names should match these glob patterns (["*"] by default)